--- a/apache_spark/thesis/grundlagen.tex
+++ b/apache_spark/thesis/grundlagen.tex
@@ -163,7 +163,7 @@ Exemplarisch werden im Folgenden einige Distanzfunktionen dargestellt, die für 
 \(dist_M(x,y) = \sum_{i} \mid x_i - y_i \mid \)
 
 
-\item \textbf{Euklidische Distanz:} Hier wird der direkte Abstand zwischen zwei Vektoren beschrieben, also zweier Punkte im n-dimensionalen Raum. Diese Funktion lässt sich nur auf metrische Daten anwenden. Auch hier wird durch Quadrieren und der Quadratwurze der Differenzen eine Normalisierung erreicht, die die Distanzwerte vergleichbar macht. 
+\item \textbf{Euklidische Distanz:} Hier wird der direkte Abstand zwischen zwei Vektoren beschrieben, also zweier Punkte im n-dimensionalen Raum. Diese Funktion lässt sich nur auf metrische Daten anwenden. Auch hier wird durch Quadrieren und der Quadratwurzel der Differenzen eine Normalisierung erreicht, die die Distanzwerte vergleichbar macht. 
 
 \(dist_E(x,y) = \sqrt{\sum_{i}(x_i - y_i)^2} \)
 
@@ -207,7 +207,7 @@ Zu den Cluster-Verfahren zählen laut \citelit{ams03} und \citelit{cl14} unter A
 
 \newpage		
 		
-		\item \textbf{EM-Clustering (partitionierendes Verfahren):} Dieses Verfahren basiert auf dem Expectation-Maximization-Alogrithmus. Dieser arbeitet nach dem Prinzip, zunächst mit einem zufällig gewählten Modell zu starten. In der Expectation-Phase werden die Zuteilungen der Datenobjekte zum Modell verbessert, in Maximization-Phase werden die Modellparameter entsprechend der aktuellen Zuteilung verbessert, also das Modell wird analog der Datenobjekte angepasst \citelit{ma08}. Das EM-Clustering ist im Gegensatz zum k-Means-Algorithmus in seiner Zuordnung unscharf, da prinzipiell jedes Datenobjekt jedem Cluster zugehörig sein könnte, sowie jedes Datenobjekt jeden Parameter verändern könnte.  
+		\item \textbf{EM-Clustering (partitionierendes Verfahren):} Dieses Verfahren basiert auf dem Ex-pectation-Maximization-Alogrithmus. Dieser arbeitet nach dem Prinzip, zunächst mit einem zufällig gewählten Modell zu starten. In der Expectation-Phase werden die Zuteilungen der Datenobjekte zum Modell verbessert, in Maximization-Phase werden die Modellparameter entsprechend der aktuellen Zuteilung verbessert, also das Modell wird analog der Datenobjekte angepasst \citelit{ma08}. Das EM-Clustering ist im Gegensatz zum k-Means-Algorithmus in seiner Zuordnung unscharf, da prinzipiell jedes Datenobjekt jedem Cluster zugehörig sein könnte, sowie jedes Datenobjekt jeden Parameter verändern könnte.  
 		\item \textbf{Fuzzy C-Means (partitionierendes Verfahren):} Die Entfernung vom Clusterzentrum bestimmt über den Zugehörigkeitsgrad eines Datenobjekts. Der Zugehörigkeitsgrad wird mittels eines Intervalls zwischen 0 und 1 angegeben, wobei 1 eine totale Zugehörigkeit zum jeweiligen Clusterzentrum bedeutet. Die Verschiebung der Zentren findet im Gegensatz zum k-Means-Algorithmus jedoch abhängig vom Zuordnungsgrad ab. So werden Datenobjekte mit dem Zuordnungsgrad 1 vollständig bei der Berechnung berücksichtigt, während kleinere Zugehörigkeitsgrade den Einfluss entsprechen minimieren \citelit{cm05}.
 		\item \textbf{divisive Clusterverfahren (hierarchisches Verfahren):} Wie bei der Vorstellung der prinzipiellen Clusterverfahren beschrieben, wird beim divisiven Clustering zunächst mit einem Cluster begonnen, das sämtliche Datenobjekte beinhaltet. In diesem wird nun nach genau dem Datenobjekt gesucht, bei dem die Ähnlichkeit zu den anderen Datenobjekten im Cluster minimal, also die mittlere Distanz maximal ist. In jeder Iteration wird um das so ermittelte Zentrum ein neues Cluster aus den Datenobjekten gebildet, die eine geringe Distanz zum jeweiligen Clusterzentrum aufweisen. Die Iteration läuft genau so lange, bis jedes Cluster nur noch ein Datenobjekt enthält.      
 		\item \textbf{agglomerative Clusterverfahren (hierarchisches Verfahren):} Dieses ist analog zu den \textit{divisiven Clusterverfahren}, allerdings umgekehrt. Zunächst ist jedes Datenobjekt zugleich ein Cluster. Die Cluster mit einer geringen Distanz werden so lange iterativ zusammengefasst, bis alle Datenobjekte in einem Cluster vorhanden sind. In einem Alternativansatz werden die Cluster zusammengefasst, deren \textit{totale Varianz} (Streuung) die geringste Steigerung aufweist. 
@@ -332,17 +332,17 @@ Entscheidungsbäume können als Klassifikationsverfahren in Betracht gezogen wer
 \section{Das MapReduce-Paradigma}
 \label{section:das mapreduce-paradigma}
 
-Bei \textit{MapReduce} handelt es sich um ein Programmierparadigma, das von \textit{Google, Inc.} entwickelt wurde, um große Datensätze mittels eines auf einem Cluster verteilten und nebenläufig ausführbaren Algorithmus analysieren und verarbeiten zu können. \citelit{mr04} Dieses Paradigma eignet sich sowohl für strukturierte, als auch unstrukturierte Daten, Voraussetzung für die erfolgreiche Verarbeitung ist allerdings, dass die \textit{Tasks} einen hohen Parallelisierbarkeitsgrad aufweisen.  
+Bei \textit{MapReduce} handelt es sich um ein Programmierparadigma, das von \textit{Google, Inc.} entwickelt wurde, um große Datensätze mittels eines auf einem Cluster verteilten und nebenläufig ausführbaren Algorithmus analysieren und verarbeiten zu können \citelit{mr04}. Dieses Paradigma eignet sich sowohl für strukturierte, als auch unstrukturierte Daten, Voraussetzung für die erfolgreiche Verarbeitung ist allerdings, dass die \textit{Tasks} einen hohen Parallelisierbarkeitsgrad aufweisen (Vergleich \citelit{mr04}).  
 
-MapReduce nimmt einen Satz von Eingabe Key/Value-Pairs entgegen und produziert daraus einen Satz von Ausgabe \textit{Key/Value-Pairs}. Das Paradigma besteht aus drei jeweils parallelisierbaren Einzelschritten, von denen der Anwender selbst zwei festlegen kann:
+MapReduce nimmt einen Satz von Eingabe Key/Value-Pairs entgegen und produziert daraus einen Satz von Ausgabe \textit{Key/Value-Pairs}. Das Paradigma besteht aus drei jeweils parallelisierbaren Einzelschritten, von denen durch den Anwender selbst zwei definiert werden müssen \citeint{ap11}:
 
 \begin{itemize}
 
-\item \textbf{Map:} Hier wird aus den Eingabedaten mittels durchgehend gleicher Berechnungen ein temporär relevantes \textit{Key/Value-Pair} erzeugt. Für jedes Wertepaar aus der Eingabeliste wird die \textit{Map-Funktion} separat und unabhängig aufgerufen. Die Ausführung erfolgt nebenläufig und verteilt. Die Be
+\item \textbf{Map:} Hier wird aus den Eingabedaten mittels durchgehend gleicher Berechnungen ein temporär relevantes \textit{Key/Value-Pair} erzeugt. Für jedes Wertepaar aus der Eingabeliste wird die \textit{Map-Funktion} separat und unabhängig aufgerufen. Die Map-Funktion besteht aus Filter- und Sortierregeln. Die Ausführung erfolgt nebenläufig und verteilt. 
 
-\item \textbf{Shuffle:} In diesem Schritt werden die Ergebnisse vor dem Aufruf der Reduce-Funktion nach ihrem duch Map erzeugten neuen Schlüssel in \textit{Collections} gruppiert. Da in diesem Schritt bei verteilten Systemen und großen Datenmengen gegebenenfalls extreme Last im Netzwerk erzeugt werden kann, kommt hier oft vorher noch ein Combine-Schritt zur Anwendung. 
+\item \textbf{Shuffle:} In diesem Schritt werden die Ergebnisse vor dem Aufruf der \textit{Reduce-Funktion} nach ihrem duch \textit{Map} erzeugten neuen Schlüssel in \textit{Collections} gruppiert. Da in diesem Schritt bei verteilten Systemen und großen Datenmengen gegebenenfalls extreme Last im Netzwerk erzeugt werden kann, kommt hier oft vorher noch ein \textit{Combine-Schritt} zur Anwendung. Dieser sorgt mittels einer Vorreduktion dafür, dass die Datenmenge, die beim Shuffle über das Netzwerk transferiert wird, bereits auf den jeweiligen Nodes möglichst stark reduziert wird.  
 
-\item \textbf{Reduce:} Auf jede im Shuffle-Schritt erzeugten Collection wird hier eine beliebige, durch den Anwender definierte Funktion ausgeführt. Ziel dieser Funktion ist die Reduktion der vorhandenen Datensätze. Diese Funktion erstellt eine Ausgabe-Collection mit den Ergebnissen und ist ebenfalls je Collection nebenläufig und verteilt anwendbar.
+\item \textbf{Reduce:} Auf jede im \textit{Shuffle-Schritt} erzeugten \textit{Collection} wird hier eine beliebige, durch den Anwender definierte Funktion ausgeführt. Ziel dieser Funktion ist die Reduktion der vorhandenen Datensätze. Diese Funktion erstellt eine Ausgabe-Collection mit den Ergebnissen und ist ebenfalls je Collection nebenläufig und verteilt anwendbar.
 
 \end{itemize}
 
@@ -360,7 +360,7 @@ MapReduce nimmt einen Satz von Eingabe Key/Value-Pairs entgegen und produziert d
 
 In Abbildung \ref{fig:wordcount} wird das \textit{MapReduce-Modell} an einem praktischen Beispiel zur Wortzählung gezeigt. Bei \textit{MapReduce} wird zunächst eine problemspezifische \textit{Map-Funktion} definiert. Diese teilt die Ursprungsmenge mittels einer internen \textit{Split-Funktion} in gleich große Partitionen und versieht unstrukturierte Werte in einem ersten Schritt mit Standardwerten, um so aus jedem unstrukturierten Datensatz ein Key-Value-Pair zu generieren \ßciteint{xi12}. Im gezeigten Beispiel wird hier jedem Wort die Zahl Eins als Key zugeordnet. Im nächsten Schritt werden diese so gewonnenen Zwischen-Key-Value-Paare in einem \textit{Shuffling-Prozess} klassifiziert und die so homogenisierten Pakete auf die Knoten im Cluster verteilt. Nun enthält jede Ausführungseinheit nur noch gleiche Wörter. Im Reduce-Schritt schließlich, werden die gleichartigen Wörter zu Gesamtmengen zusammengefasst, addiert und im Endergebnis aggregiert. 
 
-An dem gezeigten Beispiel lässt sich gut erkennen, dass die einzelnen Ausführungsschritte jeweils parallelisiert und auf separate Knoten im Cluster verteilt werden können. Das Laufzeitsystem kümmert sich um die Details der Partitionierung der Eingabedaten, die Ressourcenverwaltung innerhalb des Clusters, das Behandeln von Fehlern und die Kommunikation zwischen den einzelnen Knoten. 
+An dem gezeigten Beispiel ist deutlich erkennbar, dass die einzelnen Ausführungsschritte jeweils parallelisiert und auf separate Knoten im Cluster verteilt werden können. Das Laufzeitsystem übernimmt die Details der Partitionierung der Eingabedaten, die Ressourcenverwaltung innerhalb des Clusters, das Behandeln von Fehlern und die Kommunikation zwischen den einzelnen Knoten. 
  
 
 \section{Streaming Frameworks}
