--- a/apache_spark/thesis/internetQuellen.bib
+++ b/apache_spark/thesis/internetQuellen.bib
@@ -1,12 +1,28 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Sascha Patrick Lorenz at 2015-02-08 03:13:59 +0100 
+%% Created for Sascha Patrick Lorenz at 2015-02-08 19:59:57 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@misc{spa15,
+	Author = {Apache Spark},
+	Date-Added = {2015-02-08 18:58:33 +0000},
+	Date-Modified = {2015-02-08 18:59:54 +0000},
+	Month = {01},
+	Title = {Spark Programming Guide. Apache Spark URL: \url{http://spark.apache.org/docs/1.2.0/programming-guide.html}},
+	Year = {2015}}
+
+@misc{ap11,
+	Author = {Andrew Pavlo, Erik Paulson, et al.},
+	Date-Added = {2015-02-08 16:31:45 +0000},
+	Date-Modified = {2015-02-08 16:38:01 +0000},
+	Month = {08},
+	Title = {A Comparison of Approaches to Large-Scale Data Analysis. Brown University, Providence URL: \url{http://database.cs.brown.edu/projects/mapreduce-vs-dbms/}},
+	Year = {2009}}
 
 @misc{or14,
 	Author = {Lascon Storage},
