--- a/apache_spark/thesis/literaturVerzeichnis.bib
+++ b/apache_spark/thesis/literaturVerzeichnis.bib
@@ -1,12 +1,30 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Sascha Patrick Lorenz at 2015-02-07 23:16:01 +0100 
+%% Created for Sascha Patrick Lorenz at 2015-02-08 15:24:27 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{dz14,
+	Author = {Ashwini Kuntamukkala},
+	Date-Added = {2015-02-08 14:22:48 +0000},
+	Date-Modified = {2015-02-08 14:24:27 +0000},
+	Edition = {1},
+	Publisher = {DZone },
+	Title = {DZone Refcardz 204: Apache Spark},
+	Year = {2014}}
+
+@book{ls15,
+	Author = {Holden Karau, Andy Kowinski, Matei Zaharia},
+	Date-Added = {2015-02-08 14:17:59 +0000},
+	Date-Modified = {2015-02-08 14:20:16 +0000},
+	Edition = {Early Release},
+	Publisher = {O'Reilly},
+	Title = {Learning Spark - Lightning Fast Data Analysis},
+	Year = {2015}}
 
 @book{dm09,
 	Author = {T. Hastie, R. Tibshirani, et al. },
