--- a/apache_spark/thesis/anhang.tex
+++ b/apache_spark/thesis/anhang.tex
@@ -12,7 +12,74 @@
 \printglossary[type=\acronymtype,title=Abkürzungen]
 
 
-\section{Quelltext}
-\label{section:quelltext}
+\section{Übersicht der RDD Transformationen}
+\label{section:rddtransform}
+
+Die folgende Tabelle zeigt alle Transformationen, die auf Spark RDDs möglich sind (Entnommen aus \citeint{spa15} - Stand Spark 1.2.0):
+
+\begin{tabular}{| p{5cm} | p{8cm} | }
+\hline
+Transformation & Zweck \\ \hline \hline
+map(func) & Return a new distributed dataset formed by passing each element of the source through a function func.  \\ \hline 
+filter(func) & Return a new dataset formed by selecting those elements of the source on which func returns true. \\ \hline 
+flatMap(func) & Similar to map, but each input item can be mapped to 0 or more output items (so func should return a Seq rather than a single item).\\ \hline 
+mapPartitions(func) & Similar to map, but runs separately on each partition (block) of the RDD, so func must be of type Iterator<T> => Iterator<U> when running on an RDD of type T. \\ \hline 
+mapPartitionsWithIndex(func) & Similar to mapPartitions, but also provides func with an integer value representing the index of the partition, so func must be of type (Int, Iterator<T>) => Iterator<U> when running on an RDD of type T. \\ \hline 
+sample(withReplacement, fraction, seed) & Sample a fraction fraction of the data, with or without replacement, using a given random number generator seed. \\ \hline 
+union(otherDataset) & Return a new dataset that contains the union of the elements in the source dataset and the argument. \\ \hline 
+intersection(otherDataset) & Return a new RDD that contains the intersection of elements in the source dataset and the argument. \\ \hline 
+distinct([numTasks])) & Return a new dataset that contains the distinct elements of the source dataset. \\ \hline 
+
+\end{tabular}
+
+\begin{tabular}{| p{5cm} | p{8cm} | }
+\hline
+Transformation & Zweck \\ \hline \hline
+groupByKey([numTasks]) & When called on a dataset of (K, V) pairs, returns a dataset of (K, Iterable<V>) pairs. 
+Note: If you are grouping in order to perform an aggregation (such as a sum or average) over each key, using reduceByKey or combineByKey will yield much better performance. 
+Note: By default, the level of parallelism in the output depends on the number of partitions of the parent RDD. You can pass an optional numTasks argument to set a different number of tasks. \\ \hline 
+reduceByKey(function, [numTasks]) & When called on a dataset of (K, V) pairs, returns a dataset of (K, V) pairs where the values for each key are aggregated using the given reduce function func, which must be of type (V,V) => V. Like in groupByKey, the number of reduce tasks is configurable through an optional second argument. \\ \hline 
+aggregateByKey(zeroValue) (seqOp, combOp, [numTasks]) & When called on a dataset of (K, V) pairs, returns a dataset of (K, U) pairs where the values for each key are aggregated using the given combine functions and a neutral "zero" value. Allows an aggregated value type that is different than the input value type, while avoiding unnecessary allocations. Like in groupByKey, the number of reduce tasks is configurable through an optional second argument. \\ \hline
+sortByKey([ascending], [numTasks]) & When called on a dataset of (K, V) pairs where K implements Ordered, returns a dataset of (K, V) pairs sorted by keys in ascending or descending order, as specified in the boolean ascending argument.  \\ \hline
+\end{tabular}
+
+\begin{tabular}{| p{5cm} | p{8cm} | }
+\hline
+Transformation & Zweck \\ \hline \hline
+join(otherDataset, [numTasks]) & When called on datasets of type (K, V) and (K, W), returns a dataset of (K, (V, W)) pairs with all pairs of elements for each key. Outer joins are supported through leftOuterJoin, rightOuterJoin, and fullOuterJoin. \\ \hline
+cogroup(otherDataset, [numTasks]) & When called on datasets of type (K, V) and (K, W), returns a dataset of (K, Iterable<V>, Iterable<W>) tuples. This operation is also called groupWith. \\ \hline
+cartesian(otherDataset) & When called on datasets of types T and U, returns a dataset of (T, U) pairs (all pairs of elements). \\ \hline
+pipe(command, [envVars]) & Pipe each partition of the RDD through a shell command, e.g. a Perl or bash script. RDD elements are written to the process's stdin and lines output to its stdout are returned as an RDD of strings. \\ \hline
+coalesce(numPartitions) & Decrease the number of partitions in the RDD to numPartitions. Useful for running operations more efficiently after filtering down a large dataset.  \\ \hline
+repartition(numPartitions) & Reshuffle the data in the RDD randomly to create either more or fewer partitions and balance it across them. This always shuffles all data over the network.  \\ \hline
+repartitionAndSortWithin Partitions(partitioner) & Repartition the RDD according to the given partitioner and, within each resulting partition, sort records by their keys. This is more efficient than calling repartition and then sorting within each partition because it can push the sorting down into the shuffle machinery.  \\ \hline
 
 
+\end{tabular}
+
+Die folgende Tabelle zeigt alle Actions, die auf Spark RDDs möglich sind (Entnommen aus \citeint{spa15} - Stand Spark 1.2.0):
+
+
+\begin{tabular}{| p{5cm} | p{8cm} | }
+\hline
+Actions & Zweck \\ \hline \hline
+reduce(func) & Aggregate the elements of the dataset using a function func (which takes two arguments and returns one). The function should be commutative and associative so that it can be computed correctly in parallel.  \\ \hline 
+collect() & Return all the elements of the dataset as an array at the driver program. This is usually useful after a filter or other operation that returns a sufficiently small subset of the data. \\ \hline 
+count() & Return the number of elements in the dataset. \\ \hline 
+first() & Return the first element of the dataset (similar to take(1)). \\ \hline 
+take(n) & Return an array with the first n elements of the dataset. Note that this is currently not executed in parallel. Instead, the driver program computes all the elements.  \\ \hline 
+takeSample(withReplacement, num, [seed]) & Return an array with a random sample of num elements of the dataset, with or without replacement, optionally pre-specifying a random number generator seed. \\ \hline 
+takeOrdered(n, [ordering]) & Return the first n elements of the RDD using either their natural order or a custom comparator. \\ \hline 
+saveAsTextFile(path) & Write the elements of the dataset as a text file (or set of text files) in a given directory in the local filesystem, HDFS or any other Hadoop-supported file system. Spark will call toString on each element to convert it to a line of text in the file. \\ \hline 
+
+\end{tabular}
+
+\begin{tabular}{| p{5cm} | p{8cm} | }
+\hline
+Actions & Zweck \\ \hline \hline
+saveAsSequenceFile(path) & Write the elements of the dataset as a Hadoop SequenceFile in a given path in the local filesystem, HDFS or any other 
+Hadoop-supported file system. This is available on RDDs of key-value pairs that either implement Hadoop's Writable interface. In Scala, it is also available on types that are implicitly convertible to Writable (Spark includes conversions for basic types like Int, Double, String, etc). \\ \hline
+saveAsObjectFile(path) & Write the elements of the dataset in a simple format using Java serialization, which can then be loaded using SparkContext.objectFile().\\ \hline 
+countByKey() & Only available on RDDs of type (K, V). Returns a hashmap of (K, Int) pairs with the count of each key.  \\ \hline
+foreach(func) & Run a function func on each element of the dataset. This is usually done for side effects such as updating an accumulator variable (see below) or interacting with external storage systems.\\ \hline 
+\end{tabular}
