--- a/apache_spark/thesis/internetQuellen.bib
+++ b/apache_spark/thesis/internetQuellen.bib
@@ -1,20 +1,52 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Sascha Patrick Lorenz at 2015-02-08 19:59:57 +0100 
+%% Created for Sascha Patrick Lorenz at 2015-02-11 16:29:01 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
 
+@misc{vag14,
+	Author = {Mitchell Hashimoto},
+	Date-Added = {2015-02-11 15:27:24 +0000},
+	Date-Modified = {2015-02-11 15:29:01 +0000},
+	Month = {04},
+	Title = {Feature Preview: Docker-Based Development Environments URL: \url{http://www.vagrantup.com/blog/feature-preview-vagrant-1-6-docker-dev-environments.html}},
+	Year = {2014. \note{Aufgerufen am 08.02.2015}}}
+
+@misc{ms15,
+	Author = {Jay Vyas},
+	Date-Added = {2015-02-11 15:14:25 +0000},
+	Date-Modified = {2015-02-11 15:17:09 +0000},
+	Month = {01},
+	Title = {Microservice principles and Immutability -- demonstrated with Apache Spark and Cassandra URL: \url{http://developerblog.redhat.com/2015/01/20/microservice-principles-and-immutability-demonstrated-with-apache-spark-and-cassandra/}},
+	Year = {2015. \note{Aufgerufen am 04.02.2015}}}
+
+@misc{dol14,
+	Author = {Steven J. Vaughan-Nichols},
+	Date-Added = {2015-02-10 15:43:13 +0000},
+	Date-Modified = {2015-02-10 15:44:57 +0000},
+	Month = {06},
+	Title = {Docker libcontainer unifies Linux container powers URL: \url{http://www.zdnet.com/article/docker-libcontainer-unifies-linux-container-powers/}},
+	Year = {2014. \note{Aufgerufen am 26.01.2015}}}
+
+@misc{do15,
+	Author = {Docker},
+	Date-Added = {2015-02-10 15:14:25 +0000},
+	Date-Modified = {2015-02-10 15:17:13 +0000},
+	Month = {12},
+	Title = {Docker Documentation URL: \url{https://docs.docker.com}},
+	Year = {2014. \note{Aufgerufen am 25.01.2015}}}
+
 @misc{spa15,
 	Author = {Apache Spark},
 	Date-Added = {2015-02-08 18:58:33 +0000},
-	Date-Modified = {2015-02-08 18:59:54 +0000},
+	Date-Modified = {2015-02-10 15:26:48 +0000},
 	Month = {01},
 	Title = {Spark Programming Guide. Apache Spark URL: \url{http://spark.apache.org/docs/1.2.0/programming-guide.html}},
-	Year = {2015}}
+	Year = {2015. \note{Aufgerufen am 02.11.2014}}}
 
 @misc{ap11,
 	Author = {Andrew Pavlo, Erik Paulson, et al.},
