--- a/apache_spark/thesis/literaturVerzeichnis.bib
+++ b/apache_spark/thesis/literaturVerzeichnis.bib
@@ -1,12 +1,24 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Sascha Patrick Lorenz at 2015-02-08 15:24:27 +0100 
+%% Created for Sascha Patrick Lorenz at 2015-02-10 17:11:08 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{cbo14,
+	Author = {Stephen Soltesz, Andy Bavier, et al. },
+	Date-Added = {2015-02-10 16:06:45 +0000},
+	Date-Modified = {2015-02-10 16:11:08 +0000},
+	Publisher = {University of Toronto, Department of Computer Science},
+	Title = {Container-based Operating System Virtualization: A Scalable, High-performance Alternative to Hypervisors},
+	Year = {2014}}
+
+@book{cite-key,
+	Date-Added = {2015-02-08 16:29:25 +0000},
+	Date-Modified = {2015-02-08 16:29:55 +0000}}
 
 @book{dz14,
 	Author = {Ashwini Kuntamukkala},
