--- a/apache_spark/thesis/architektur.tex
+++ b/apache_spark/thesis/architektur.tex
@@ -52,10 +52,47 @@ Bereits konfigurierte Docker-Container können in einer eigenen Plattform, dem s
 
 Im Folgenden wird exemplarisch gezeigt, wie ein Docker Container für Apache Spark aufgebaut, konfiguriert und deployt werden kann \citeint{ms15}. Dieser Container wurde auf einem Windows Hostrechner innerhalb einer VirtualBox-Instanz erstellt. Diese virtuelle Maschine wurde mit einer leichtgewichtigen CentOS-Installation aufgebaut. 
 
-Da CentOS auf einer RedHat-Linuxdistribution aufsetzt, wird als Paketmanager \textit{YUM} eingesetzt. Vagrant\citeint{vag14}
+Da CentOS auf einer RedHat-Linuxdistribution aufsetzt, wird als Paketmanager \textit{YUM} eingesetzt. Für die einfache Provisionierung der Docker Container bietet sich Vagrant ab Version 1.6 an \citeint{vag14}. So lassen sich die Docker Container mittels entsprechender Scripts einfach konfigurieren. 
 
+\begin{lstlisting}[label=vagrant setup jvm-spark,caption=Setup JVM with Spark]
+FROM jvm
+RUN yum clean all
+RUN yum install -y tar yum-utils wget
+RUN yum-config-manager --save 
+RUN yum update -y
+RUN yum install -y java-1.8.0-openjdk-devel.x86_64
+COPY spark-1.2.0-bin-hadoop2.4.tgz /opt/
+RUN tar -xzf /opt/spark-1.2.0-bin-hadoop2.4.tgz -C /opt/
+RUN echo "SPARK_HOME=/opt/spark-1.2.0-bin-hadoop2.4" >> /etc/environment
+RUN echo "JAVA_HOME=/usr/lib/jvm/java-1.8.0-openjdk/" >> /opt/spark-1.2.0-bin-hadoop2.4/conf/spark-env.sh
 
+\end{lstlisting}
 
+\begin{lstlisting}[label=vagrant setup jvm-spark,caption=Setup JVM with Spark]
+# number of instances : First one is master.
+$spark_num_instances = 2
+$cassandra_num_instances = 1
+Vagrant.configure("2") do |config|
+    # nodes definition
+    (1..$spark_num_instances).each do |i|
+        config.vm.define "scale#{i}" do |scale|
+            scale.vm.provider "docker" do |d|
+                d.build_dir = "spark/"
+                d.name = "scale#{i}"
+                d.create_args = ["--privileged=true"]
+                d.remains_running = true
+                if "#{i}" == "1"
+                    d.ports = [ "4040:4040", "7707:7707" ] 
+                else
+                    d.create_args = d.create_args << "--link" << "scale1:scale1.docker"
+                end
+            end
+            scale.vm.synced_folder "./", "/scale-shared/"
+            scale.vm.hostname = "scale#{i}.docker"
+       end 
+    end
+
+\end{lstlisting}
 
 
 
